--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "express-lesson",
   "version": "1.0.0",
-  "description": "Teaching the fundamentals of Express.js",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rrrliu/express-lesson.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -19,8 +18,6 @@
   },
   "homepage": "https://github.com/rrrliu/express-lesson#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "express": "^4.17.1"
   }
 }
