--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   },
   "homepage": "https://github.com/rrrliu/express-lesson#readme",
   "dependencies": {
+    "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
-    "pg": "^8.4.2"
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.4.2",
+    "react-router-dom": "^5.2.0"
   }
 }
